--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
   cloud_firestore: ^6.0.0
+  shared_preferences: ^2.5.3
+  sqflite: ^2.3.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
