--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   shared_preferences: ^2.5.3
   sqflite: ^2.3.0
   path: ^1.9.0
+  image_picker: ^1.0.4
+  firebase_storage: ^13.0.0
+  cloudinary_public: ^0.23.1
 
 dev_dependencies:
   flutter_test:
