--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,17 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
 
+  assets:
+    - lib/assets/Logo.png
+
   uses-material-design: true
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/icon.png"
